2000-11-27  Andreas Jaeger  <aj@suse.de>

	* login/programs/pt_chown.c (do_pt_chown): Mark function as static
	to avoid warning.
	* login/programs/utmpdump.c (print_entry): Likewise.

2000-11-25  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>

	* sysdeps/mips/__longjmp.c (__longjmp): Restore SP and FP last and
	in a single asm as they may be used to access other stored
	registers.
	* sysdeps/mips/mips64/__longjmp.c (__longjmp): Likewise.

2000-11-27  Andreas Jaeger  <aj@suse.de>

	* rt/tst-aio.c: Mark test functions as static to avoid warnings.
	* rt/tst-aio64.c: Likewise.

2000-11-27  Ulrich Drepper  <drepper@redhat.com>

	* catgets/Makefile (test1.cat): Set LC_ALL, LOCPATH, and GCONV_PATH
	for gencat run.
	(libc.cat): Likewise.
	* catgets/gencat.c: Implement handling of message catalogs encoded
	with stateful character sets.
	Based on a patch by Shinya Hanataka <hanataka@abyss.rim.or.jp>.

2000-11-26  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/opendir.c (__opendir): Add cast to avoid warning.

	* inet/getnameinfo.c: Adjust casts to avoid warnings.
	* inet/rcmd.c: Likewise.
	* inet/ruserpass.c: Likewise.
	* inet/netinet/in.h (IN6_IS_ADDR_UNSPECIFIED, IN6_IS_ADDR_LOOPBACK,
	IN6_IS_ADDR_MULTICAST, IN6_IS_ADDR_LINKLOCAL, IN6_IS_ADDR_SITELOCAL,
	IN6_IS_ADDR_V4MAPPED, IN6_IS_ADDR_V4COMPAT, IN6_ARE_ADDR_EQUAL,
	IN6_IS_ADDR_MC_NODELOCAL, IN6_IS_ADDR_MC_LINKLOCAL,
	IN6_IS_ADDR_MC_SITELOCAL, IN6_IS_ADDR_MC_ORGLOCAL,
	IN6_IS_ADDR_MC_GLOBAL): Preserve const in cast.
	* include/aliases.h: Add prototypes for internal __getalias* functions.
	* include/netdb.h: Add prototypes for __old_gethostent_r,
	__old_gethostbyaddr_r, __old_gethostbyname_r, __old_gethostbyname2_r,
	__old_getnetent_r, __old_getnetbyaddr_r, __old_getnetbyname_r,
	__old_getservent_r, __old_getservbyname_r, __old_getservbyport_r,
	__old_getprotoent_r, __old_getprotobyname_r, __old_getprotobynumber_r.
	* include/rpc/netdb.h: Add prototypes for __old_getrpcbyname_r,